# cpp-fun

./: .gitignore  CMakeLists.txt  Clang.cmake  build.Boost.Clang.sh  setup.CodeLite.Clang.Native.Debug.sh  setup.CodeLite.Default.Native.Debug.sh  setup.sh  setupClang.sh  setupGCC.sh
Monad/: CMakeLists.txt
Monad/include/: OptionalAware.h  Pipe.h  Reader.h  Writer.h
Monad/source/: main.cpp
Processor/: CMakeLists.txt
Processor/include/: Processor.h
Processor/source/: ProcessorTest.cpp
Semaphore/: CMakeLists.txt
Semaphore/include/: Semaphore.h
Semaphore/source/: SemaphoreTest.cpp  main.cpp
TypeChecksum/: CMakeLists.txt
TypeChecksum/include/: TypeChecksum.h
TypeChecksum/source/: TypeChecksumTest.cpp
